[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-mcp"
version = "0.1.0"
description = "한국 주요 도시 날씨 조회 MCP 서버 (Korean Weather MCP Server)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "weather", "korea", "claude", "gemini", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
weather-mcp = "weather_mcp.server:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/weather-mcp"
Repository = "https://github.com/YOUR_USERNAME/weather-mcp"
Issues = "https://github.com/YOUR_USERNAME/weather-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_mcp"]
